--- a/src/components/task/task.module.less
+++ b/src/components/task/task.module.less
@@ -3,9 +3,9 @@
   position: absolute;
   right: 34px;
   bottom: 108px;
-  padding: 24px 32px;
+  padding: 0 32px 24px;
   border: 1px solid @primary-color-grey;
   width: 734px;
-  max-height: 600px;
+  height: 600px;
   overflow: auto;
 }
