--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -6,3 +6,23 @@
   font-family: "Lato", sans-serif;
   color: @primary-color-black;
 }
+
+.btn-icon-custom {
+  &:active, &:focus, &:hover {
+    background-color: @white-color !important;
+    border: none !important;
+    outline: none;
+  }
+}
+
+.card-quick {
+  background-color: @white-color;
+  position: absolute;
+  right: 34px;
+  bottom: 108px;
+  padding: 0 32px 24px;
+  border: 1px solid @primary-color-grey;
+  width: 734px;
+  height: 600px;
+  overflow: auto;
+}
