--- a/src/styles/rsuite.less
+++ b/src/styles/rsuite.less
@@ -1,8 +1,8 @@
 // @import "~rsuite/styles/variables";
 // @import '~rsuite/Animation/styles/index';
 // @import '~rsuite/AutoComplete/styles/index';
-// @import '~rsuite/Avatar/styles/index';
-// @import '~rsuite/AvatarGroup/styles/index';
+@import '~rsuite/Avatar/styles/index';
+@import '~rsuite/AvatarGroup/styles/index';
 // @import '~rsuite/Badge/styles/index';
 // @import '~rsuite/Breadcrumb/styles/index';
 @import '~rsuite/Button/styles/index';
@@ -33,12 +33,12 @@
 // @import '~rsuite/Header/styles/index';
 // @import '~rsuite/FormHelpText/styles/index';
 @import '~rsuite/IconButton/styles/index';
-// @import '~rsuite/Input/styles/index';
-// @import '~rsuite/InputGroup/styles/index';
+@import '~rsuite/Input/styles/index';
+@import '~rsuite/InputGroup/styles/index';
 // @import '~rsuite/InputNumber/styles/index';
 // @import '~rsuite/InputPicker/styles/index';
 // @import '~rsuite/List/styles/index';
-// @import '~rsuite/Loader/styles/index';
+@import '~rsuite/Loader/styles/index';
 // @import '~rsuite/Message/styles/index';
 // @import '~rsuite/Modal/styles/index';
 // @import '~rsuite/MultiCascader/styles/index';
