--- a/src/styles/vars.less
+++ b/src/styles/vars.less
@@ -17,6 +17,7 @@
 @chat-name-purple: #9B51E0;
 @chat-body-green: #D2F2EA;
 @chat-name-green: #D2F2EA;
+@chat-body-gray: #F8F8F8;
 
 // Global
 @white-color: #FFFFFF;
