--- a/src/styles/customs/button.less
+++ b/src/styles/customs/button.less
@@ -4,7 +4,7 @@
   outline: none !important;
 
   &.rs-btn-disabled {
-    background-color: @white-color !important;
+    background-color: transparent !important;
     border: none !important;
     outline: none !important;
   }
