--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -21,8 +21,9 @@
   right: 34px;
   bottom: 108px;
   padding: 0 32px 24px;
-  border: 1px solid @primary-color-grey;
+  border: 1px solid #BDBDBD;
   width: 734px;
   height: 600px;
   overflow: auto;
+  border-radius: 5px;
 }
